# techstack

./: README.md  bootstrap  install  main.py  pyproject.toml  setup  stack  upgrade
fedora/: .setup.swp  .upgrade.swp  create_agent  create_agents  create_antigravity  create_claude  create_codex  create_fedora  create_grok  create_machine  create_opencode  create_sandbox  install.sh  install_brew  install_fedora  setup  setup-host  setup-nspawn  stack  upgrade  upgrade-host  upgrade.sh
fedora-nspawn/: br0.network  create  create_machine  machine.nspawn  setup
macos/: install.sh  install_agents  setup  stack  todo.md  upgrade
ubuntu/: install_agents  setup  stack  todo.md  upgrade
ubuntu-nspawn/: setup
