[project]
name = "techstack"
version = "26.7.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gguf>=0.19.0",
    "huggingface-hub>=1.23.0",
    "matplotlib>=3.11.0",
    "ollama>=0.6.2",
    "torch>=2.13.0",
    "transformers>=5.13.0",
]
